# creation

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-1625aae11bde8d979ff990dacd607cb4c74e9b64e612cdfdc48fffe0455377a9.json  query-276ff8268d4b432b2d3d95d9afca281e04bd0345ba4d72210ba9613a8f692011.json  query-81c828a3106f9c818a87c5ae572969de3c8945b92bcf63408c1e72a01eb6d2dc.json  query-cdec06c338aa6ea5fb62ff85fe8d68eb940ffa4806a3590670297c1c0f7dd2ba.json
backend/: .env  Cargo.toml  Dockerfile  README.md  compose.yml
backend/.sqlx/: query-ec0096fb04c34722deea3035b05e6d8b5af7e7189724c5ed256cc0bd754f32c7.json
backend/creation-adapter/: .env  Cargo.toml
backend/creation-adapter/src/: errors.rs  lib.rs
backend/creation-adapter/src/model/: user.rs
backend/creation-adapter/src/persistence/: mysql.rs
backend/creation-adapter/src/repository/: mysql.rs  user.rs
backend/creation-driver/: Cargo.toml
backend/creation-driver/src/: handler.rs  jwt_auth.rs  lib.rs
backend/creation-driver/src/middleware/: cors.rs
backend/creation-service/: Cargo.toml
backend/creation-service/src/: model.rs
backend/creation-service/src/model/: db.rs  user.rs
backend/creation-service/src/repository/: user.rs
backend/creation-service/src/service/: user.rs
backend/creation-usecase/: Cargo.toml
backend/docs/: ARCHITECTURE.md  environment-variables.md  how-to-develop.md
backend/migrations/: 20240330073341_init.up.sql
backend/src/: handler.rs  jwt_auth.rs  lib.rs  main.rs  model.rs
creation-adapter/: Cargo.toml
creation-adapter/src/: lib.rs
creation-adapter/src/model/: user.rs
creation-adapter/src/persistence/: mysql.rs
creation-adapter/src/repository/: mod.rs  user.rs
creation-driver/: .env  Cargo.toml
creation-driver/src/: handler.rs  jwt_auth.rs  lib.rs  response.rs
creation-driver/src/handler/: health_check.rs  user.rs
creation-driver/src/route/: mod.rs
creation-service/: Cargo.toml
creation-service/src/model/: user.rs
creation-service/src/repository/: user.rs
creation-service/src/service/: user.rs
creation-usecase/: Cargo.toml
creation-usecase/src/usecase/: user.rs
creation_back/: Cargo.toml
docs/: how-to-develop.md
migrations/: 20240330073341_init.up.sql
tests/: user.rs
tests/fixtures/: user.sql
