[workspace]
members = ["creation-adapter", "creation-driver", "creation-service", "creation-usecase"]
resolver = "2"

[workspace.dependencies]
argon2 = "0.5.3"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.1.0"
jsonwebtoken = "9.2.0"
rand_core = { version = "0.6.4", features = ["std"] }
redis = "0.25.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono", "time", "rust_decimal", "uuid", "migrate"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"]}
uuid = { version = "1.7.0", features = ["serde", "v4"] }
thiserror = "1.0.59"
async-trait = "0.1.80"