[package]
name = "creation-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creation-service = { path = "../creation-service" }
creation-usecase = { path = "../creation-usecase" }
creation-adapter = { path = "../creation-adapter" }
axum.workspace = true
tokio.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
axum-extra.workspace = true
jsonwebtoken.workspace = true
rand_core.workspace = true
serde_json.workspace = true
argon2.workspace = true
tracing.workspace = true
chrono.workspace = true
time.workspace = true
uuid.workspace = true
thiserror.workspace = true
tower.workspace = true