[package]
name = "creation-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creation-service = { path = "../creation-service" }
# TODO: delete
creation-usecase = { path = "../creation-usecase" }
sqlx.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
argon2.workspace = true
rand_core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true